--- a/redd/package.json
+++ b/redd/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.29.10",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.19",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
