--- a/redd/package.json
+++ b/redd/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
