--- a/redd/package.json
+++ b/redd/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.11",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1"
   },
