--- a/redd/package.json
+++ b/redd/package.json
@@ -14,6 +14,7 @@
     "@arcgis/core": "^4.29.10",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/krona-one": "^5.0.13",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.3",
